# Thesis_Work

./: .gitignore  README.md
baxter_moveit_config/: .setup_assistant  package.xml
baxter_moveit_config/config/: baxter.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
baxter_moveit_config/launch/: baxter_moveit_controller_manager.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
baxter_ws/: .ycm_extra_conf.py  baxter.sh
baxter_ws/devel/: .catkin  _setup_util.py  setup.sh
baxter_ws/devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
baxter_ws/devel/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  UpdateSource.h  UpdateSources.h  UpdateStatus.h
baxter_ws/devel/include/controller_manager_msgs/: ControllerState.h  ControllerStatistics.h  ControllersStatistics.h  ListControllerTypesRequest.h  ListControllerTypesResponse.h  ListControllersRequest.h  ListControllersResponse.h  LoadControllerRequest.h  LoadControllerResponse.h  ReloadControllerLibrariesRequest.h  ReloadControllerLibrariesResponse.h  SwitchControllerRequest.h  SwitchControllerResponse.h  UnloadControllerRequest.h  UnloadControllerResponse.h
baxter_ws/devel/include/move_rt/: ExecutingTrajectoryAction.h  ExecutingTrajectoryActionFeedback.h  ExecutingTrajectoryActionGoal.h  ExecutingTrajectoryActionResult.h  ExecutingTrajectoryFeedback.h  ExecutingTrajectoryGoal.h  ExecutingTrajectoryResult.h  TaskParamUpdate.h  TaskParamUpdateRequest.h  TaskParamUpdateResponse.h  UpdateFrame.h  UpdateFrameRequest.h  UpdateFrameResponse.h
baxter_ws/devel/lib/baxter_control/: baxter_assembly_state  baxter_hardware_interface  joint_states_republisher  trajectory_msg_test
baxter_ws/devel/lib/baxter_gripper_server/: gripper_action_server
baxter_ws/src/baxter_moveit_config/: .setup_assistant
baxter_ws/src/baxter_nodes/: CMakeLists.txt
baxter_ws/src/ros_test/: CMakeLists.txt
baxter_ws/src/ros_test/scripts/: move_rt_test.py
baxter_ws/src/ros_test/src/: move_rt_connector.cpp
rope_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
rope_ws/devel/.private/bond/: .catkin  (+3 more)
rope_ws/logs/process_rope_msgs/: build.check.001.log.stderr
rope_ws/logs/roslz4/: build.make.000.log.stderr
rope_ws/src/: .rosinstall
rope_ws/src/actionlib/: .tar
rope_ws/src/catkin/: .tar
rope_ws/src/class_loader/: .tar
rope_ws/src/dynamic_reconfigure/: .tar
rope_ws/src/genpy/: .tar
rope_ws/src/pluginlib/: .tar
rope_ws/src/process_rope/: CMakeLists.txt
rope_ws/src/process_rope_msgs/: CMakeLists.txt
rope_ws/src/rosbag_migration_rule/: .tar
rope_ws/src/rosconsole_bridge/: .tar
rope_ws/src/rospack/: .tar
test_ws/: .ycm_extra_conf.py
test_ws/devel/: .catkin  _setup_util.py  setup.sh
test_ws/src/baxter_control_mine/: CMakeLists.txt
test_ws/src/baxter_control_mine/launch/: baxter_fsm.launch  control_baxter.launch
test_ws/src/baxter_control_mine/scripts/: baxter_fsm.py  baxter_fsm_rope.py  baxter_my_fsm.py  baxter_pick_and_place_fsm.py  check_crossing.py  convert_to_world_server.py  debug_img_processing.py  get_camera_views.py  img2world.py  process_image.py  process_image_server.py  redirector.py  suppress_coliision_avoidance.py
test_ws/src/baxter_control_mine/src/: baxter_movegroup.cpp  calculate_ik_server.cpp  end_effector_adjuster.cpp  get_current_joint_states_server.cpp  go_to_goal_server.cpp  go_to_joint_pos_server.cpp  image_processing_server.cpp  rviz_to_rrobot.cpp  stream_from_camera.cpp  test_service.cpp
test_ws/src/baxter_moveit_config/: .setup_assistant
test_ws/src/baxter_msgs_mine/: CMakeLists.txt  package.xml
(+2927 files in other folders)
